# codelve

./: .gitignore  CMakeLists.txt  build.bat
config/: codelve.cfg
src/: CMakeLists.txt  codelve.cpp  codelve.h  main.cpp
src/core/: context_manager.cpp  context_manager.h  engine.cpp  engine.h  query_processor.cpp  query_processor.h
src/llm/: llm_interface.cpp  llm_interface.h
src/scanner/: scanner.cpp  scanner.h
src/ui/: chat_panel.cpp  chat_panel.h  file_browser.cpp  file_browser.h  main_window.cpp  main_window.h
src/utils/: config.cpp  config.h  logger.cpp  logger.h  memory_manager.cpp  memory_manager.h
